# gmail-sales-automation

./: README.md  credentials.json  main.py  pyproject.toml
